# DZ_13_2

./: pyproject.toml
hw_project/: .env  db.sqlite3  postgres
hw_project/hw_project/: settings.py
hw_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw_project/quotes/migrations/: 0001_initial.py  0002_rename_description_author_bio_and_more.py
hw_project/quotes/static/quotes/: style.css
hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  author.html  base.html  index.html  tag_quotes.html
hw_project/quotes/templatetags/: extract.py
hw_project/users/: urls.py  views.py
hw_project/users/templates/users/: login.html  signup.html
hw_project/utils/: add_quotes_to_mongo.py  migration.py
