[tool.poetry]
name = "hw-project"
version = "0.1.0"
description = ""
authors = ["KatePomazunova <kateryna.pomazunova@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
pymongo = "^4.3.3"
python-dotenv = "^1.0.0"
django-environ = "^0.10.0"
environ = "^1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
